feature(endpoint):implement get all users endpoint Write functions to get all users Create a route to get all users Write tests for get all users Document with swagger [#166816115]
add more test

change status code

fix error with test

add more test

add well formatted jsdocs
